set text color var in tailwind config

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,8 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --heading: 216.9 19.1% 26.7%;
+    --paragraph: 215 13.8% 34.1;
   }
 
   .dark {
