--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,7 @@ body {
     --chart-5: 27 87% 67%;
     --heading: 216.9 19.1% 26.7%;
     --paragraph: 215 13.8% 34.1;
+    --hero-bg: 42, 100%, 95%;
   }
 
   .dark {
